# loxalone

./: .gitignore  CMakeLists.txt  README.md
data/: binding.lox  make_counter.lox
src/: Environment.cpp  Environment.h  Error.h  Expr.cpp  Expr.h  Interpreter.cpp  Interpreter.h  LiteralFormatter.h  LoxCallable.cpp  LoxCallable.h  Misc.cpp  Misc.h  Parser.cpp  Parser.h  PrettyPrinter.cpp  PrettyPrinter.h  Resolver.cpp  Resolver.h  Scanner.cpp  Scanner.h  Stmt.h  Token.h  errors.h  expr.cpp  expr.h  loxalone.cpp  misc.cpp  misc.h  scanner.cpp  scanner.h  tokens.h
src/cli/: generate_ast.cpp  loxalone.cpp  pretty_print.cpp
src/interpreter/: Environment.cpp  Environment.h  Expr.h  Interpreter.cpp  Interpreter.h  LiteralFormatter.h  LoxCallable.cpp  LoxCallable.h  LoxClass.cpp  LoxClass.h  LoxInstance.cpp  LoxInstance.h  Misc.cpp  Parser.cpp  Parser.h  Resolver.cpp  Resolver.h  Scanner.h  Stmt.h  Token.h
